--- a/prepros.config
+++ b/prepros.config
@@ -81,11 +81,15 @@
       "remotePath": "",
       "timeout": 20000,
       "autoUpload": false,
+      "reuseConnection": true,
       "connectionType": "ftp",
       "history": []
     },
     "packages": {
       "createPackageLock": true
+    },
+    "images": {
+      "preserveOriginal": true
     },
     "tasks": {
       "autoprefixer": {
@@ -110,13 +114,15 @@
                 "> 2%",
                 "not dead"
               ],
-              "preserveImports": false
+              "preserveImports": false,
+              "polyfills": false
             }
           },
           "@babel/preset-react": true,
           "@babel/preset-flow": false
         },
         "plugins": {
+          "@babel/plugin-proposal-class-static-block": false,
           "@babel/plugin-proposal-class-properties": false,
           "@babel/plugin-proposal-decorators": {
             "enable": false,
@@ -126,6 +132,7 @@
           },
           "@babel/plugin-proposal-export-namespace-from": false,
           "@babel/plugin-proposal-function-sent": false,
+          "@babel/plugin-proposal-logical-assignment-operators": false,
           "@babel/plugin-proposal-nullish-coalescing-operator": false,
           "@babel/plugin-proposal-numeric-separator": false,
           "@babel/plugin-proposal-optional-chaining": false,
@@ -156,13 +163,15 @@
                     "> 2%",
                     "not dead"
                   ],
-                  "preserveImports": false
+                  "preserveImports": false,
+                  "polyfills": false
                 }
               },
               "@babel/preset-react": true,
               "@babel/preset-flow": false
             },
             "plugins": {
+              "@babel/plugin-proposal-class-static-block": false,
               "@babel/plugin-proposal-class-properties": false,
               "@babel/plugin-proposal-decorators": {
                 "enable": false,
@@ -172,6 +181,7 @@
               },
               "@babel/plugin-proposal-export-namespace-from": false,
               "@babel/plugin-proposal-function-sent": false,
+              "@babel/plugin-proposal-logical-assignment-operators": false,
               "@babel/plugin-proposal-nullish-coalescing-operator": false,
               "@babel/plugin-proposal-numeric-separator": false,
               "@babel/plugin-proposal-optional-chaining": false,
@@ -207,6 +217,7 @@
       },
       "dart-sass": {
         "indentType": "space",
+        "allowWildcardImports": false,
         "indentWidth": 2,
         "linefeed": "lf",
         "sourceMap": false
@@ -294,6 +305,7 @@
           "properties": true,
           "pure_funcs": [],
           "pure_getters": false,
+          "reduce_funcs": true,
           "reduce_vars": true,
           "sequences": true,
           "side_effects": true,
@@ -339,6 +351,7 @@
       },
       "node-sass": {
         "indentType": "space",
+        "allowWildcardImports": false,
         "indentWidth": 2,
         "linefeed": "lf",
         "outputStyle": "expanded",
